drivers/gpu/drm/xe/xe_vm_types.h
@@ -162,8 +162,9 @@ struct xe_vm {
 #define XE_VM_FLAG_SCRATCH_PAGE		BIT(3)
 #define XE_VM_FLAG_FAULT_MODE		BIT(4)
 #define XE_VM_FLAG_BANNED		BIT(5)
-#define XE_VM_FLAG_TILE_ID(flags)	FIELD_GET(GENMASK(7, 6), flags)
-#define XE_VM_FLAG_SET_TILE_ID(tile)	FIELD_PREP(GENMASK(7, 6), (tile)->id)
+#define XE_VM_FLAG_EXTOBJ_BOOKKEEP	BIT(6)
+#define XE_VM_FLAG_TILE_ID(flags)	FIELD_GET(GENMASK(8, 7), flags)
+#define XE_VM_FLAG_SET_TILE_ID(tile)	FIELD_PREP(GENMASK(8, 7), (tile)->id)
 	unsigned long flags;
 
 	/** @composite_fence_ctx: context composite fence */
